FIX: Android tablet composer menu z-index (#1102)
An interim fix for ensuring the AI helper menus are properly shown.

--- a/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
+++ b/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
@@ -692,16 +692,17 @@
   }
 }
 
-.fk-d-menu[data-identifier="ai-composer-helper-menu"] {
+.fk-d-menu[data-identifier="ai-composer-helper-menu"],
+.fk-d-menu[data-identifier="ai-title-suggester"] {
   z-index: z("modal", "dialog");
 
   .fullscreen-composer & {
     z-index: z("header") + 1;
   }
-}
 
-.mobile-view .fk-d-menu[data-identifier="ai-composer-helper-menu"] {
-  z-index: z("mobile-composer");
+  .mobile-view & {
+    z-index: z("mobile-composer");
+  }
 }
 
 .fk-d-toasts:has(.ai-proofread-error-toast) {
